--- a/cordel/index.html
+++ b/cordel/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="https://icons.iconarchive.com/icons/icons8/windows-8/256/Science-Literature-icon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Projeto Cordel</title>
   </head>
   <body>
     <header>
