--- a/social-links-profile-main/index.html
+++ b/social-links-profile-main/index.html
@@ -2,28 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="https://icons.iconarchive.com/icons/aha-soft/3d-social/256/Social-network-icon.png" type="image/x-icon">
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="./style.css">
+  
   <title>Frontend Mentor | Social links profile</title>
+
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
+  </style>
 </head>
 <body>
-
+  <div class="container">
   <main>
-    <section class="conteudo__apresentacao">
-      <img src="assets/images/avatar-jessica.jpeg" alt="">
-      <h3>Jessica Randall</h1>
-      <h4>London, United Kingdom</h2>
-      <p>"Front-end developer and avid reader."</p>
-    </section>
-    <section class="conteudo__botao">
-      <a href="">GitHub</a>
-      <a href="">Frontend Mentor</a>
-      <a href="">LinkedIn</a>
-      <a href="">Twitter</a>
-      <a href="">Instagram</a>
-    </section>
-  </main>
-
+    <div id="profile"></div>
+<h1>
+  Jessica Randall<br>
+  <span>London, United Kingdom</span>
+</h1>
+<h2>
+  "Front-end developer and avid reader."
+</h2>
+<a href="https://github.com/" class="link"> GitHub</a>
+<a href="https://frontendmentor.io/" class="link">Frontend Mentor</a>
+<a href="https://linkedin.com" class="link">LinkedIn</a>
+<a href="https://twitter.com/" class="link">Twitter</a>
+<a href="https://www.instagram.com/" class="link"> Instagram</a>
+</main>
+</div>
 </body>
 </html>
