--- a/results-summary-component-main/index.html
+++ b/results-summary-component-main/index.html
@@ -15,30 +15,30 @@
         <div id="conteudo__esquerda__itens">
           <h1>Your Result</h1>
           <div class="circulo">
-            <p>76</p>
-            <p >of 100</p>
+              <p id="numeroPrincipal">76</p>
+              <p id="numeroSecundario">of 100</p>
           </div>
-          <p>Great</p>
-          <p>You scored higher than 65% of the people who have taken these tests.</p>
+          <h2>Great</h2>
+          <p class="conteudo__esquerda__texto">You scored higher than 65% of the people who have taken these tests.</p>
         </div>
       </section>
       <section id="conteudo__direita">
         <h2>Summary</h2>
-        <p>
-          <img src="assets/images/icon-reaction.svg" alt=""><strong>Reaction</strong>
-          80 / 100
+        <p id="reaction">
+          <img src="assets/images/icon-reaction.svg" alt=""><span id="vermelho" >Reaction</span>
+          <span class="numeros"><strong>80</strong> / 100</span>
         </p>
-        <p>
-          <img src="assets/images/icon-memory.svg" alt=""><strong>Memory</strong>
-          92 / 100
+        <p id="memory">
+          <img src="assets/images/icon-memory.svg" alt=""><span id="amarelo" >Memory</span>
+          <span class="numeros"><strong>92 </strong>/ 100</span>
         </p>
-        <p>
-          <img src="assets/images/icon-verbal.svg" alt=""><strong>Verbal</strong>
-          61 / 100
+        <p id="verbal">
+          <img src="assets/images/icon-verbal.svg" alt=""><span id="verde" >Verbal</span>
+          <span class="numeros"><strong>61</strong> / 100</span>
         </p>
-        <p>
-          <img src="assets/images/icon-visual.svg" alt=""><strong>Visual</strong>
-          72 / 100
+        <p id="visual">
+          <img src="assets/images/icon-visual.svg" alt=""><span id="azul" >Visual</span>
+          <span class="numeros"><strong>72</strong> / 100</span>
         </p>
         <a href="#">Continue</a>
       </section>
