--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -51,24 +51,24 @@
       <p>The table below shows nutritional values per serving without the additional fillings.</p>
       <table>
         <tr>
-          <th>Nutrient</th>
-          <th>Amount</th>
+          <th class="nutrientes">Nutrient</th>
+          <th class="quantidade__num">Amount</th>
         </tr>
         <tr>
-          <td>Calories</td>
-          <td>277kcal</td>
+          <td class="nutrientes">Calories</td>
+          <td class="quantidade__num">277kcal</td>
         </tr>
         <tr>
-          <td>Carbs</td>
-          <td>0g</td>
+          <td class="nutrientes">Carbs</td>
+          <td class="quantidade__num">0g</td>
         </tr>
         <tr>
-          <td>Protein</td>
-          <td>20g</td>
+          <td class="nutrientes">Protein</td>
+          <td class="quantidade__num">20g</td>
         </tr>
         <tr>
-          <td>Fat</td>
-          <td>22g</td>
+          <td class="nutrientes">Fat</td>
+          <td class="quantidade__num">22g</td>
         </tr>
       </table>
     </section>
